Tidied up the .content-block element in the CSS so that they're more appealing to the eye.

--- a/style.css
+++ b/style.css
@@ -292,6 +292,16 @@ img.attachment-thumbnail {
 	padding: 1em;
 }
 
+.content-block img {
+	margin: 1em 0;
+}
+
+.content-block p {
+	width: 90%;
+	margin: 0 auto;
+	text-align: justify;
+}
+
 a {
 	text-decoration: none;
 }
