.front-page-content added to rows on the front page to introduce a margin-bottom CSS attribute. This stops post thumbnails from touching.

--- a/style.css
+++ b/style.css
@@ -296,3 +296,11 @@ img.attachment-thumbnail {
 a:hover {
 	text-decoration: none;
 }
+
+.front-page-content {
+	margin-bottom: 1em;
+}
+
+a p {
+	color: #333;
+}
