Seperated out Treehouse CSS from main.scss

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,2 +1,4 @@
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
+@import "treehouse.scss";
+
 @import "main.scss";
