Introduced variables.scss so that Bootstrap variables can be changed. Also added this to the style.scss file.

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,4 +1,5 @@
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 @import "treehouse.scss";
 
+@import "variables.scss";
 @import "main.scss";
