--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/*! Wordpress_Boilerplate 1.0.0 filename.css 2015-11-17 11:43:51 PM */
+/*! Wordpress_Boilerplate 1.0.0 filename.css 2015-11-18 12:14:05 AM */
 
 @charset "UTF-8";
 /*!
