--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,7 +6,8 @@
 }
 
 .home-content-header {
-	background-color: #eee;
+	background-color: $brand-primary;
+	color: $gray-lighter;
 	padding: 0.5em 0;
 }
 
@@ -27,7 +28,7 @@ img.attachment-thumbnail.wp-post-image {
 .social-icon {
 	max-width: 43px;
 	height: 43px;
-	fill: #666;
+	fill: $gray-light;
 }
 
 #github-svg, #codepen-svg, #treehouse-svg, #twitter-svg {
@@ -90,4 +91,9 @@ a:hover {
 
 a p {
 	color: #333;
+}
+
+.jumbotron {
+	background: $brand-primary;
+	color: $gray-lighter;
 }
