--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,5 +9,6 @@
 @import "404.scss";
 @import "footer.scss";
 @import "front-page.scss";
+@import "header.scss";
 @import "image.scss";
 @import "links.scss";
