--- a/assets/scss/front-page.scss
+++ b/assets/scss/front-page.scss
@@ -1,19 +1,34 @@
 .portfolio, .blog {
-	background: $brand-primary;
+	background: $gray-lighter;
 	margin-bottom: 1em;
+}
+
+.jumbotron {
+	background: $brand-primary;
 }
 
 .portfolio-tile, .blog-tile {
 	background: #fff;
 	padding: 1em;
+	border-radius: 10px;
+	margin-bottom: 1em;
+	transition: box-shadow 0.5s ease-in-out;
+
+	&:hover {
+		box-shadow: 0px 0px 15px $brand-primary;
+	}
+}
+
+.portfolio-heading, .blog-heading {
+	padding-bottom: 1em;
 }
 
 .row.portfolio-row, .row.blog-row {
 	padding-bottom: 1em;
 }
 
-@media screen and (max-width: 753px) {
-	.portfolio-tile, .blog-tile {
-		margin-bottom: 1em;
+@media screen and (max-width:783px) {
+	.blog-tile h3 {
+		text-align: center;
 	}
 }
