--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/*! Wordpress_Boilerplate 1.0.0 filename.css 2015-11-21 12:18:40 PM */
+/*! Wordpress_Boilerplate 1.0.0 filename.css 2015-11-22 12:57:49 PM */
 
 @charset "UTF-8";
 /* Variables */
@@ -7566,6 +7566,7 @@ input[type="search"]::-webkit-search-decoration {
 
 .jumbotron {
   background: #2ecc71;
+  color: #fff;
 }
 
 .portfolio-tile, .blog-tile {
@@ -7577,6 +7578,10 @@ input[type="search"]::-webkit-search-decoration {
 }
 .portfolio-tile:hover, .blog-tile:hover {
   box-shadow: 0px 0px 15px #2ecc71;
+}
+
+.blog-row a, .portfolio-row a {
+  text-decoration: none;
 }
 
 .portfolio-heading, .blog-heading {
@@ -7603,6 +7608,10 @@ img.attachment-thumbnail.wp-post-image {
 
 a p {
   color: #333;
+}
+
+a {
+  transition: color 0.2s ease-in-out;
 }
 
 /*# sourceMappingURL=style.css.map */
