--- a/assets/scss/front-page.scss
+++ b/assets/scss/front-page.scss
@@ -5,18 +5,22 @@
 
 .jumbotron {
 	background: $brand-primary;
+	color: $body-bg;
 }
 
 .portfolio-tile, .blog-tile {
-	background: #fff;
+	background: $body-bg;
 	padding: 1em;
 	border-radius: 10px;
 	margin-bottom: 1em;
 	transition: box-shadow 0.5s ease-in-out;
-
 	&:hover {
 		box-shadow: 0px 0px 15px $brand-primary;
 	}
+}
+
+.blog-row a, .portfolio-row a {
+	text-decoration: none;
 }
 
 .portfolio-heading, .blog-heading {
