--- a/assets/scss/front-page.scss
+++ b/assets/scss/front-page.scss
@@ -19,6 +19,16 @@
 	}
 }
 
+.portfolio-tile {
+	max-width: 100%;
+	min-height: 200px;
+}
+
+img.attachment-thumbnail.wp-post-image {
+	max-width: 100%;
+	max-height: 100%;
+}
+
 .blog-row a, .portfolio-row a {
 	text-decoration: none;
 }
