--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/*! Wordpress_Boilerplate 1.0.0 filename.css 2015-11-22 1:58:18 PM */
+/*! Wordpress_Boilerplate 1.0.0 filename.css 2015-11-22 6:32:46 PM */
 
 @charset "UTF-8";
 /* Variables */
@@ -7577,7 +7577,7 @@ input[type="search"]::-webkit-search-decoration {
   transition: box-shadow 0.5s ease-in-out;
 }
 .portfolio-tile:hover, .blog-tile:hover {
-  box-shadow: 0px 0px 15px #2ecc71;
+  box-shadow: 0px 0px 20px #2ecc71;
 }
 
 .portfolio-tile {
@@ -7590,7 +7590,7 @@ img.attachment-thumbnail.wp-post-image {
   max-height: 100%;
 }
 
-.blog-row a, .portfolio-row a {
+.blog-row a:hover, .portfolio-row a:hover {
   text-decoration: none;
 }
 
@@ -7622,6 +7622,37 @@ a p {
 
 a {
   transition: color 0.2s ease-in-out;
+}
+
+a:hover, a:focus {
+  text-decoration: none;
+}
+
+a h2 {
+  position: relative;
+  text-decoration: none;
+}
+
+a h2:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #2ecc71;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
+}
+
+a h2:hover:before {
+  background-color: #208e4e;
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
 }
 
 /*# sourceMappingURL=style.css.map */
