--- a/assets/scss/front-page.scss
+++ b/assets/scss/front-page.scss
@@ -15,7 +15,7 @@
 	margin-bottom: 1em;
 	transition: box-shadow 0.5s ease-in-out;
 	&:hover {
-		box-shadow: 0px 0px 15px $brand-primary;
+		box-shadow: 0px 0px 20px $brand-primary;
 	}
 }
 
@@ -29,7 +29,7 @@ img.attachment-thumbnail.wp-post-image {
 	max-height: 100%;
 }
 
-.blog-row a, .portfolio-row a {
+.blog-row a:hover, .portfolio-row a:hover {
 	text-decoration: none;
 }
 
