--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,3 +1,34 @@
 a {
   transition: color 0.2s ease-in-out;
 }
+
+a:hover, a:focus {
+  text-decoration: none;
+}
+
+a h2 {
+  position: relative;
+  text-decoration: none;
+}
+
+a h2:before {
+  content:"";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: $link-color;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
+}
+
+a h2:hover:before {
+  background-color: $link-hover-color;
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
