--- a/assets/scss/front-page.scss
+++ b/assets/scss/front-page.scss
@@ -15,7 +15,7 @@
 	margin-bottom: 1em;
 	transition: box-shadow 0.5s ease-in-out;
 	&:hover {
-		box-shadow: 0px 0px 20px $brand-primary;
+		box-shadow: 0px 0px 20px 5px $brand-primary;
 	}
 }
 
@@ -41,7 +41,7 @@ img.attachment-thumbnail.wp-post-image {
 	padding-bottom: 1em;
 }
 
-@media screen and (max-width:783px) {
+@media screen and (max-width:767px) {
 	.blog-tile h3 {
 		text-align: center;
 	}
