--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/*! Wordpress_Boilerplate 1.0.0 filename.css 2015-11-22 9:44:42 PM */
+/*! Wordpress_Boilerplate 1.0.0 filename.css 2015-11-22 10:54:42 PM */
 
 @charset "UTF-8";
 /* Variables */
@@ -1414,11 +1414,11 @@ textarea {
 }
 
 a {
-  color: #e67e22;
+  color: #f39c12;
   text-decoration: none;
 }
 a:hover, a:focus {
-  color: #a85913;
+  color: #b06f09;
   text-decoration: underline;
 }
 a:focus {
@@ -1644,12 +1644,12 @@ mark,
 }
 
 .text-primary {
-  color: #e67e22;
+  color: #f39c12;
 }
 
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #bf6516;
+  color: #c87f0a;
 }
 
 .text-success {
@@ -1693,12 +1693,12 @@ a.text-danger:focus {
 }
 
 .bg-primary {
-  background-color: #e67e22;
+  background-color: #f39c12;
 }
 
 a.bg-primary:hover,
 a.bg-primary:focus {
-  background-color: #bf6516;
+  background-color: #c87f0a;
 }
 
 .bg-success {
@@ -3737,38 +3737,38 @@ a.btn.disabled, fieldset[disabled] a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #e67e22;
-  border-color: #d67118;
+  background-color: #f39c12;
+  border-color: #e08e0b;
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #bf6516;
-  border-color: #64350b;
+  background-color: #c87f0a;
+  border-color: #674105;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #bf6516;
-  border-color: #9f5412;
+  background-color: #c87f0a;
+  border-color: #a66908;
 }
 .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #bf6516;
-  border-color: #9f5412;
+  background-color: #c87f0a;
+  border-color: #a66908;
 }
 .btn-primary:active:hover, .btn-primary:active:focus, .btn-primary:active.focus, .btn-primary.active:hover, .btn-primary.active:focus, .btn-primary.active.focus, .open > .btn-primary.dropdown-toggle:hover, .open > .btn-primary.dropdown-toggle:focus, .open > .btn-primary.dropdown-toggle.focus {
   color: #fff;
-  background-color: #9f5412;
-  border-color: #64350b;
+  background-color: #a66908;
+  border-color: #674105;
 }
 .btn-primary:active, .btn-primary.active, .open > .btn-primary.dropdown-toggle {
   background-image: none;
 }
 .btn-primary.disabled, .btn-primary.disabled:hover, .btn-primary.disabled:focus, .btn-primary.disabled.focus, .btn-primary.disabled:active, .btn-primary.disabled.active, .btn-primary[disabled], .btn-primary[disabled]:hover, .btn-primary[disabled]:focus, .btn-primary[disabled].focus, .btn-primary[disabled]:active, .btn-primary[disabled].active, fieldset[disabled] .btn-primary, fieldset[disabled] .btn-primary:hover, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary.focus, fieldset[disabled] .btn-primary:active, fieldset[disabled] .btn-primary.active {
-  background-color: #e67e22;
-  border-color: #d67118;
+  background-color: #f39c12;
+  border-color: #e08e0b;
 }
 .btn-primary .badge {
-  color: #e67e22;
+  color: #f39c12;
   background-color: #fff;
 }
 
@@ -3921,7 +3921,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
 }
 
 .btn-link {
-  color: #e67e22;
+  color: #f39c12;
   font-weight: normal;
   border-radius: 0;
 }
@@ -3934,7 +3934,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
   border-color: transparent;
 }
 .btn-link:hover, .btn-link:focus {
-  color: #a85913;
+  color: #b06f09;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -4088,7 +4088,7 @@ tbody.collapse.in {
   color: #fff;
   text-decoration: none;
   outline: 0;
-  background-color: #e67e22;
+  background-color: #f39c12;
 }
 
 .dropdown-menu > .disabled > a, .dropdown-menu > .disabled > a:hover, .dropdown-menu > .disabled > a:focus {
@@ -4526,7 +4526,7 @@ tbody.collapse.in {
 }
 .nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
   background-color: #eeeeee;
-  border-color: #e67e22;
+  border-color: #f39c12;
 }
 .nav .nav-divider {
   height: 1px;
@@ -4573,7 +4573,7 @@ tbody.collapse.in {
 }
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
   color: #fff;
-  background-color: #e67e22;
+  background-color: #f39c12;
 }
 
 .nav-stacked > li {
@@ -5208,7 +5208,7 @@ tbody.collapse.in {
   padding: 6px 12px;
   line-height: 1.42857;
   text-decoration: none;
-  color: #e67e22;
+  color: #f39c12;
   background-color: #fff;
   border: 1px solid #ddd;
   margin-left: -1px;
@@ -5228,7 +5228,7 @@ tbody.collapse.in {
 .pagination > li > span:hover,
 .pagination > li > span:focus {
   z-index: 3;
-  color: #a85913;
+  color: #b06f09;
   background-color: #eeeeee;
   border-color: #ddd;
 }
@@ -5238,8 +5238,8 @@ tbody.collapse.in {
 .pagination > .active > span:focus {
   z-index: 2;
   color: #fff;
-  background-color: #e67e22;
-  border-color: #e67e22;
+  background-color: #f39c12;
+  border-color: #f39c12;
   cursor: default;
 }
 .pagination > .disabled > span,
@@ -5368,10 +5368,10 @@ a.label:hover, a.label:focus {
 }
 
 .label-primary {
-  background-color: #e67e22;
+  background-color: #f39c12;
 }
 .label-primary[href]:hover, .label-primary[href]:focus {
-  background-color: #bf6516;
+  background-color: #c87f0a;
 }
 
 .label-success {
@@ -5428,7 +5428,7 @@ a.label:hover, a.label:focus {
   padding: 1px 5px;
 }
 .list-group-item.active > .badge, .nav-pills > .active > a > .badge {
-  color: #e67e22;
+  color: #f39c12;
   background-color: #fff;
 }
 .list-group-item > .badge {
@@ -5515,7 +5515,7 @@ a.badge:hover, a.badge:focus {
 a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
-  border-color: #e67e22;
+  border-color: #f39c12;
 }
 
 .alert {
@@ -5633,7 +5633,7 @@ a.thumbnail.active {
   line-height: 20px;
   color: #fff;
   text-align: center;
-  background-color: #e67e22;
+  background-color: #f39c12;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: width 0.6s ease;
@@ -5809,8 +5809,8 @@ button.list-group-item {
 .list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
   z-index: 2;
   color: #fff;
-  background-color: #e67e22;
-  border-color: #e67e22;
+  background-color: #f39c12;
+  border-color: #f39c12;
 }
 .list-group-item.active .list-group-item-heading,
 .list-group-item.active .list-group-item-heading > small,
@@ -5822,7 +5822,7 @@ button.list-group-item {
   color: inherit;
 }
 .list-group-item.active .list-group-item-text, .list-group-item.active:hover .list-group-item-text, .list-group-item.active:focus .list-group-item-text {
-  color: #fbe9d9;
+  color: #fdedd4;
 }
 
 .list-group-item-success {
@@ -6219,22 +6219,22 @@ button.list-group-item-danger.active:focus {
 }
 
 .panel-primary {
-  border-color: #e67e22;
+  border-color: #f39c12;
 }
 .panel-primary > .panel-heading {
   color: #fff;
-  background-color: #e67e22;
-  border-color: #e67e22;
+  background-color: #f39c12;
+  border-color: #f39c12;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #e67e22;
+  border-top-color: #f39c12;
 }
 .panel-primary > .panel-heading .badge {
-  color: #e67e22;
+  color: #f39c12;
   background-color: #fff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #e67e22;
+  border-bottom-color: #f39c12;
 }
 
 .panel-success {
@@ -7558,10 +7558,11 @@ input[type="search"]::-webkit-search-decoration {
 .portfolio, .blog {
   background: #eeeeee;
   margin-bottom: 1em;
+  border-radius: 10px;
 }
 
 .jumbotron {
-  background: #e67e22;
+  background: #f39c12;
   color: #fff;
 }
 
@@ -7573,7 +7574,7 @@ input[type="search"]::-webkit-search-decoration {
   transition: box-shadow 0.5s ease-in-out;
 }
 .portfolio-tile:hover, .blog-tile:hover {
-  box-shadow: 0px 0px 20px 5px #e67e22;
+  box-shadow: 0px 0px 20px 5px #f39c12;
 }
 
 .portfolio-tile {
@@ -7592,6 +7593,11 @@ img.attachment-thumbnail.wp-post-image {
 
 .portfolio-heading, .blog-heading {
   padding-bottom: 1em;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+.portfolio-heading a, .blog-heading a {
+  color: #555555;
 }
 
 .row.portfolio-row, .row.blog-row {
@@ -7606,6 +7612,7 @@ img.attachment-thumbnail.wp-post-image {
 .navbar {
   background-color: #333;
   border: none;
+  border-radius: 0px;
 }
 
 .navbar-default .navbar-nav > li > a {
@@ -7613,17 +7620,17 @@ img.attachment-thumbnail.wp-post-image {
   transition: all 0.2s ease-in-out;
 }
 .navbar-default .navbar-nav > li > a:hover {
-  background-color: #e67e22;
+  background-color: #f39c12;
   color: #fff;
 }
 
 .navbar-default .navbar-nav .current-menu-item a {
-  color: #e67e22;
+  color: #f39c12;
   background-color: #fff;
   font-weight: bold;
 }
 .navbar-default .navbar-nav .current-menu-item a:hover {
-  color: #e67e22;
+  color: #f39c12;
   background-color: #fff;
 }
 
@@ -7663,9 +7670,9 @@ a h2:before {
   position: absolute;
   width: 100%;
   height: 2px;
-  bottom: 0;
+  bottom: -5px;
   left: 0;
-  background-color: #e67e22;
+  background-color: #555555;
   visibility: hidden;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
@@ -7674,7 +7681,6 @@ a h2:before {
 }
 
 a h2:hover:before {
-  background-color: #a85913;
   visibility: visible;
   -webkit-transform: scaleX(1);
   transform: scaleX(1);
