--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -16,9 +16,9 @@ a h2:before {
   position: absolute;
   width: 100%;
   height: 2px;
-  bottom: 0;
+  bottom: -5px;
   left: 0;
-  background-color: $link-color;
+  background-color: $gray;
   visibility: hidden;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
@@ -27,7 +27,6 @@ a h2:before {
 }
 
 a h2:hover:before {
-  background-color: $link-hover-color;
   visibility: visible;
   -webkit-transform: scaleX(1);
   transform: scaleX(1);
