Now front-page is finished

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/*! Wordpress_Boilerplate 1.0.0 filename.css 2015-11-22 10:54:42 PM */
+/*! Wordpress_Boilerplate 1.0.0 filename.css 2015-11-22 11:40:33 PM */
 
 @charset "UTF-8";
 /* Variables */
@@ -7571,7 +7571,7 @@ input[type="search"]::-webkit-search-decoration {
   padding: 1em;
   border-radius: 10px;
   margin-bottom: 1em;
-  transition: box-shadow 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 .portfolio-tile:hover, .blog-tile:hover {
   box-shadow: 0px 0px 20px 5px #f39c12;
@@ -7587,17 +7587,16 @@ img.attachment-thumbnail.wp-post-image {
   max-height: 100%;
 }
 
-.blog-row a:hover, .portfolio-row a:hover {
-  text-decoration: none;
-}
-
 .portfolio-heading, .blog-heading {
   padding-bottom: 1em;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
 }
 .portfolio-heading a, .blog-heading a {
-  color: #555555;
+  color: #222222;
+}
+.portfolio-heading a:hover, .blog-heading a:hover {
+  color: #f39c12;
 }
 
 .row.portfolio-row, .row.blog-row {
@@ -7610,7 +7609,7 @@ img.attachment-thumbnail.wp-post-image {
   }
 }
 .navbar {
-  background-color: #333;
+  background-color: #222222;
   border: none;
   border-radius: 0px;
 }
@@ -7631,6 +7630,41 @@ img.attachment-thumbnail.wp-post-image {
 }
 .navbar-default .navbar-nav .current-menu-item a:hover {
   color: #f39c12;
+  background-color: #fff;
+}
+
+.navbar-default .navbar-nav a {
+  position: relative;
+  text-decoration: none;
+}
+
+.navbar-default .navbar-nav a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 1px;
+  left: 0;
+  background-color: #555555;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
+}
+
+.navbar-default .navbar-nav a:hover:before {
+  background-color: #fff;
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+}
+
+.navbar-default .navbar-nav .current-menu-item a:before {
+  background-color: #fff;
+}
+
+.navbar-default .navbar-nav .current-menu-item a:hover:before {
   background-color: #fff;
 }
 
@@ -7658,32 +7692,6 @@ a {
 
 a:hover, a:focus {
   text-decoration: none;
-}
-
-a h2 {
-  position: relative;
-  text-decoration: none;
-}
-
-a h2:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  bottom: -5px;
-  left: 0;
-  background-color: #555555;
-  visibility: hidden;
-  -webkit-transform: scaleX(0);
-  transform: scaleX(0);
-  -webkit-transition: all 0.2s ease-in-out 0s;
-  transition: all 0.2s ease-in-out 0s;
-}
-
-a h2:hover:before {
-  visibility: visible;
-  -webkit-transform: scaleX(1);
-  transform: scaleX(1);
 }
 
 /*# sourceMappingURL=style.css.map */
