--- a/assets/scss/front-page.scss
+++ b/assets/scss/front-page.scss
@@ -14,7 +14,7 @@
 	padding: 1em;
 	border-radius: 10px;
 	margin-bottom: 1em;
-	transition: box-shadow 0.5s ease-in-out;
+	transition: all 0.5s ease-in-out;
 	&:hover {
 		box-shadow: 0px 0px 20px 5px $brand-primary;
 	}
@@ -30,16 +30,16 @@ img.attachment-thumbnail.wp-post-image {
 	max-height: 100%;
 }
 
-.blog-row a:hover, .portfolio-row a:hover {
-	text-decoration: none;
-}
-
 .portfolio-heading, .blog-heading {
 	padding-bottom: 1em;
 	border-top-right-radius: 10px;
 	border-top-left-radius: 10px;
 	& a {
-		color: $gray;
+		color: $gray-darker;
+
+		&:hover {
+			color: $brand-primary;
+		}
 	}
 }
 
